# hledger-fmt

./: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  cabal.project  fourmolu.yaml  hledger-fmt.cabal
.github/workflows/: ci.yaml  release.yaml
app/: Main.hs
src/Hledger/: Fmt.hs
test/: Spec.hs  semantic.sh
test/testdata/: assertion.golden  assertion.in.ledger  directives.golden  directives.in.ledger  multi.golden  multi.in.ledger  postings.golden  postings.in.ledger  sort.in.ledger  sort.sorted.golden  trailing.golden  trailing.in.ledger
